# semantic_exploration

./: LICENSE  README.md
3dParty/orb_slam_2_ros/: CMakeLists.txt  odom_transfer.py
3dParty/orb_slam_2_ros/ros/include/: Node.h
3dParty/orb_slam_2_ros/ros/launch/: orb_slam2_exploration.launch
3dParty/orb_slam_2_ros/ros/src/: Node.cc  RGBDNode.cc
3dParty/orb_slam_2_ros/srv/: SavePG.srv
mapping/: CMakeLists.txt  package.xml
mapping/include/semantic_octomap_node/: octomap_generator.h  octomap_generator_ros.h
mapping/include/semantic_point_cloud/: semantic_point_type.h
mapping/launch/: semantic_mapping.launch
mapping/params/: octomap_generator.yaml  semantic_cloud_matterport.yaml
mapping/scripts/: semantic_sensor_node.py
mapping/src/semantic_octomap_node/: octomap_generator.cpp  octomap_generator_ros.cpp
planning/: CMakeLists.txt  package.xml  setup.py
planning/launch/: run_semantic_exploration.launch
planning/params/: exploration_params.yaml
planning/rviz/: rviz.rviz
planning/src/exploration/: semantic_exploration_node.py
planning/src/footprints/: collision_cpp.py  footprints.py
planning/src/mapping/: costmap.py
planning/src/navigation/: path_navigation_node_position.py
planning/src/planners/: astar_cpp.py
planning/src/utilities/: functions.py
slam_pose_graph/: CMakeLists.txt  package.xml  setup.py
slam_pose_graph/src/: GraphDrawer.py
slam_pose_graph/src/orb_pose_graph/: Functions.py  Map.py  Robot.py  WeightedPoseGraph.py
