<?xml version="1.0"?>
<package format="2">
  <name>slam_pose_graph</name>
  <version>0.0.0</version>
  <description>The slam pose graph package</description>

  <maintainer email="rongge.zhang@polymtl.ca">hx</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- build_depend + build_export_depend + exec_depend -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
